--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -113,7 +113,7 @@ This implies that the state $s_{t+1}$ at a future time step $t+1$ only depends o
         \item $\mathcal{A}$ is the action space: $a_t \in \mathcal{A}$,
         \item $T: \mathcal{S} \times \mathcal{A} \times \mathcal{S} \rightarrow [0, 1]$ is the transition function,
         \item $R: \mathcal{S} \times \mathcal{A} \times \mathcal{S} \rightarrow \mathcal{R}$ is the reward function, where $\mathcal{R} \in \left[0, R_{max}\right]$ is the set of all possible rewards bounded by $R_{max} \in \mathbb{R}^+$, and
-        \item $\gamma \in [0, 1)$ is the discount factor.
+        \item $\gamma \in [0, 1]$ is the discount factor.
     \end{itemize}
     
 \end{definition}
