Address PR feedback

--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -237,7 +237,7 @@ The pseudo-code for the algorithm for \acrshort{a2c} is outlined in Appendix \re
 
 \acrfull{ppo} is a policy gradient algorithm that was introduced by Schulman et al. (2017) in their paper on \textit{Proximal Policy Optimization Algorithms} \cite{Schulman2017} with the objective of constraining policy updates. The algorithm balances sufficiently large updates in order to improve the policy, while avoiding excessively large changes that could hinder performance. 
 
-\acrshort{ppo} improves the performance of \acrfull{trpo} \cite{Schulman2015} by using a clipped surrogate objective function, that ensures that the probability ratio $r_t$ is bounded within a range of $[1 - \epsilon, 1 + \epsilon]$, where $\epsilon$ is a hyperparameter that controls the clipping range. The objective function is defined as:
+\acrshort{ppo} improves the performance of \acrfull{trpo} \cite{Schulman2015} by using a clipped surrogate objective function that ensures that the probability ratio $r_t$ is bounded within a range of $[1 - \epsilon, 1 + \epsilon]$, where $\epsilon$ is a hyperparameter that controls the clipping range. The objective function is defined as:
 \begin{equation}
     L_t^{CLIP}(\theta) = \mathbb{E}_t \left[\min\left(r_t(\theta) \hat{A}_t, \text{clip}\left(r_t(\theta), 1 - \epsilon, 1 + \epsilon\right) \hat{A}_t\right)\right],
 \end{equation}
@@ -452,6 +452,6 @@ Barriedo et al. (2020) \cite{BarredoArrieta2019} provide a comprehensive overvie
 
 The application of \acrshort{xai} methods has gained traction in the financial domain, with notable use cases including stock market trend prediction \cite{Mandeep2022} and auditing \cite{Zhang2022}. However, despite examples of \acrshort{xai} methods in finance, there is still a lack of research in \acrshort{drl}. An interesting study was conducted by González Cortés et al. (2024) \cite{Cortes2024}, whose authors address the black box behaviour of \acrshort{drl} models by proposing an intrinsically transparent algorithm. They use \acrfull{a2c} \footnote{In the paper \cite{Cortes2024}, they refer to \acrshort{a2c} as \acrfull{saac}} enhanced with an attention-layered \acrshort{lstm} to determine the importance of the input features. Although their results show an improvement in performance compared against two variants of the Markowitz model, their implementation does not scale well with the number of assets in the portfolio, as the attention mechanism is independent for each stock.
 
-Another recent study by de-la-Rica-Escudero et al. (2025) \cite{de-La-Rica-Escudero2025} proposes post-hoc explainability methods to interpret the decisions of \acrshort{ppo} agent optimised for portfolio management. They implement three model agnostic explainability techniques: \acrshort{shap}, \acrshort{lime} and feature importance analysis. Despite their proposal's ability to provide insights into the model's decision-making process, they do not use the model prediction function directly but instead implement a surrogate model to approximate the decision boundary of the \acrshort{ppo} agent, effectively adding an additional layer to the model.
+Another recent study by de-la-Rica-Escudero et al. (2025) \cite{de-La-Rica-Escudero2025} proposes post-hoc explainability methods to interpret the decisions of \acrshort{ppo} agent optimised for portfolio management. They implement three model-agnostic explainability techniques: \acrshort{shap}, \acrshort{lime} and feature importance analysis. Despite their proposal's ability to provide insights into the model's decision-making process, they do not use the model prediction function directly but instead implement a surrogate model to approximate the decision boundary of the \acrshort{ppo} agent, effectively adding an additional layer to the model.
 
-Given the lack of research in the area of explainability for \acrshort{drl} models that perform automated portfolio allocation and the current limitations of existing methods, this thesis proposes to provide a comprehensive study of  \acrshort{drl} techniques tailored for portfolio optimisation in financial markets, by exploring the potential of five prominent algorithms (\acrshort{a2c}, \acrshort{ppo}, \acrshort{ddpg}, \acrshort{td3} and \acrshort{sac}) across various market conditions and asset classes. Moreover, due to the complex and hidden nature of those algorithms, their decision-making process will be explained using \acrshort{xai} methods, such as \acrshort{shap} and \acrshort{lime}. The objective is to bridge the gap between the performance of \acrshort{drl} algorithms and their transparency.
+Given the lack of research in the area of explainability for \acrshort{drl} models that perform automated portfolio allocation and the current limitations of existing methods, this thesis proposes to provide a comprehensive study of  \acrshort{drl} techniques tailored for portfolio optimisation in financial markets, by exploring the potential of five prominent algorithms (\acrshort{a2c}, \acrshort{ppo}, \acrshort{ddpg}, \acrshort{td3} and \acrshort{sac}) across various market conditions and asset classes. Moreover, due to the complex and hidden nature of those algorithms, their decision-making process will be explained using \acrshort{xai} methods. The objective is to bridge the gap between the performance of \acrshort{drl} and algorithmic transparency.
