--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -13,7 +13,7 @@ Despite the potential of \acrshort{rl} in portfolio optimisation, its widespread
     \item lack of transparency of \acrshort{ml} models, often referred to as \glspl{blackbox}, making it increasingly complex to interpret the algorithm's decisions. 
 \end{enumerate}
 
-In recent years, the rise in popularity of \acrfull{ai} and its widespread use have led to concerns regarding its decisions due to its \gls{blackbox} nature. The concept of explainability in \acrshort{ai}, known as \acrfull{xai}, refers to a model's ability to provide details and reasons to make itself understandable \cite{BarredoArrieta2019}. The term was first coined in 2016 to describe the need for users to effectively understand, trust and manage artificial intelligence applications \cite{Gunning2019}. The need for explainability becomes particularly relevant within the financial domain, where the regulatory framework requires transparency and accountability in automated decision-making. Various relevant applications, including volatility models \cite{Brigo2021}, credit risk assessment \cite{GarciaCespedes2025} and portfolio construction \cite{Cortes2024}, have explored the concept of explainability in financial applications. The legal requirements highlight the importance of understanding a model's decisions and the need to explore the advantages of explainability in deep models, without inadvertently increasing the complexity of the overall architecture.
+In recent years, the rise in popularity of \acrfull{ai} and its widespread use have led to concerns regarding its decisions due to its \gls{blackbox} nature. The concept of explainability in \acrshort{ai}, known as \acrfull{xai}, refers to a model's ability to provide details and reasons to make itself understandable \cite{BarredoArrieta2019}. The term was first coined in 2016 to describe the need for users to effectively understand, trust and manage artificial intelligence applications \cite{Gunning2019}. The need for explainability becomes particularly relevant within the financial domain, where the regulatory framework requires transparency and accountability in automated decision-making. Various relevant applications, including volatility models \cite{Brigo2021}, credit risk assessment \cite{GarciaCespedes2025} and portfolio construction \cite{Cortes2024}, have explored the concept of explainability in financial applications. 
 
 Consequently, this thesis will focus on addressing the aforementioned challenges by exploring the application of \acrfull{drl} to portfolio optimisation and implementing explainability techniques.
 
@@ -33,7 +33,7 @@ This report is organised into six chapters, each of which focuses on a concrete 
 
 The current chapter, \ref{ch:introduction}, presents the motivation and the objectives of this thesis. It gives an overview of the potential of \acrshort{drl} in portfolio optimisation and its main challenges, particularly the lack of transparency of \acrshort{ml} models. 
 
-Chapter \ref{ch:background} provides an overview of the theoretical background of the project, including portfolio allocation and \acrlong{machinelearning} concepts. The problem of portfolio optimisation in the financial domain is outlined and the potential of \acrshort{drl} in this context is discussed. The chapter provides a comprehensive background explanation of the fundamentals of \acrlong{dl} and \acrlong{rl}, including the main algorithms (\acrshort{a2c}, \acrshort{ppo}, \acrshort{ddpg}, \acrshort{td3}, \acrshort{sac}) and techniques at their intersection, \acrshort{drl}. In addition, it gives an overview of the post-hoc explainability techniques: \Gls{featureimportance},\acrfull{lime} analysis and \acrfull{shap} values, which will be used to interpret the model's decisions. Finally, it includes a comprehensive in-depth literature review on the topics of \acrshort{ml} applied to portfolio optimisation and relevant applications of explainability techniques. 
+Chapter \ref{ch:background} provides an overview of the theoretical background of the project, including portfolio allocation and \acrlong{machinelearning} concepts. The problem of portfolio optimisation in the financial domain is outlined and the potential of \acrshort{drl} in this context is discussed. The chapter provides a comprehensive background explanation of the fundamentals of \acrlong{dl} and \acrlong{rl}, including the main algorithms (\acrshort{a2c}, \acrshort{ppo}, \acrshort{ddpg}, \acrshort{td3}, \acrshort{sac}). In addition, it gives an overview of the post-hoc explainability techniques: \Gls{featureimportance},\acrfull{lime} analysis and \acrfull{shap} values, which will be used to interpret the model's decisions. Finally, it includes a comprehensive in-depth literature review on the topics of \acrshort{ml} applied to portfolio optimisation and relevant applications of explainability techniques. 
 
 The methodology, chapter \ref{ch:methodology}, describes the techniques and methods used to tackle the problem and outlines the implementation of the proposed solution. The chapter provides a detailed explanation of the architecture and components of the proposed \acrshort{drl} model, including the state representation and reward functions. Furthermore, given the trained algorithms, it describes the implementation of the post-hoc explainability techniques.
 
