--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -33,7 +33,7 @@
 \newglossaryentry{artificialintelligence}
 {
     name=Artificial Intelligence,
-    description={Simulation of human intelligence processes by machines, especially computer systems, enabling them to perform tasks that typically require human intelligence, such as visual perception, speech recognition, decision-making, and language translation}
+    description={Simulation of human intelligence processes by machines enabling them to perform tasks that typically require human intelligence, such as visual perception, speech recognition, decision-making, and language translation}
 }
 \newglossaryentry{explainableai}
 {
@@ -115,13 +115,13 @@
 }
 \newglossaryentry{deepneuralnetwork}{
     name=Deep Neural Network,
-    text={deep neural network},
-    description={Type of artificial neural network with multiple layers that can learn complex representations and patterns in data}
+    plural={deep neural networks},
+    description={Type of artificial neural network with a succession of layers of non-linear transformations capable of learning a representation of the data with various levels of abstraction}
 }
 \newglossaryentry{markovdecisionprocess}{
     name=Markov Decision Process,
     text={Markov Decision Process},
-    description={Mathematical framework for modelling decision-making in situations where outcomes are partly random and partly under the control of a decision maker, characterised by states, actions, rewards, and transition probabilities}
+    description={Mathematical model for sequential-decision making where the outcomes are uncertain, characterised by states, actions, rewards and a transition function}
 }
 \newglossaryentry{partiallyobservablemarkovdecisionprocess}{
     name=Partially Observable Markov Decision Process,
@@ -131,7 +131,7 @@
 \newglossaryentry{bellmanequations}{
     name=Bellman Equations,
     text={Bellman equations},
-    description={Set of equations that describe the relationship between the value of a state or action and the values of subsequent states or actions in dynamic programming and reinforcement learning, used to compute optimal policies} 
+    description={Set of equations that describe the relationship between the value of a state or action and the values of subsequent states or actions in dynamic programming and reinforcement learning} 
 }
 \newglossaryentry{entropy}{
     name=Entropy,
@@ -177,7 +177,7 @@
 \newacronym{ai}{AI}{\Gls{artificialintelligence}}
 \newacronym{xai}{XAI}{\Gls{explainableai}}
 \newacronym{mpt}{MPT}{\Gls{modernportfoliotheory}}
-\newacronym{dnn}{DNN}{\gls{deepneuralnetwork}}
+\newacronym{dnn}{DNN}{\Gls{deepneuralnetwork}}
 \newacronym{mdp}{MDP}{\Gls{markovdecisionprocess}}
 \newacronym{pomdp}{POMDP}{\Gls{partiallyobservablemarkovdecisionprocess}}
 \newacronym{dqn}{DQN}{Deep Q-Network}
