--- a/report/appendix/drl_algorithms.tex
+++ b/report/appendix/drl_algorithms.tex
@@ -4,35 +4,36 @@
 
 \begin{algorithm}
 \label{alg:a2c}
-\caption{Advantage Actor-Critic (A2C) Pseudo-code}
+\caption{\acrfull{a2c} Pseudo-code}
 \input{algorithms/alg_a2c.tex}
 \end{algorithm}
 
 \begin{algorithm}
 \label{alg:ppo}
-\caption{Proximal Policy Optimization (PPO) Pseudo-code}
+\caption{\acrfull{ppo} Pseudo-code}
 \input{algorithms/alg_ppo.tex}
 \end{algorithm}
 
 \begin{algorithm}
 \label{alg:ddpg}
-\caption{Deep Deterministic Policy Gradient (DDPG) Pseudo-code}
+\caption{\acrfull{ddpg} Pseudo-code}
 \input{algorithms/alg_ddpg.tex}
 \end{algorithm}
 
 \begin{algorithm}
 \label{alg:td3}
-\caption{Twin Delayed Deep Deterministic Policy Gradient (TD3) Pseudo-code}
+\caption{\acrfull{td3} Pseudo-code}
 \input{algorithms/alg_td3.tex}
 \end{algorithm}
 
 \begin{algorithm}
 \label{alg:sac}
-\caption{Soft Actor-Critic (SAC) Pseudo-code}
+\caption{\acrfull{sac} Pseudo-code}
 \input{algorithms/alg_sac.tex}
 \end{algorithm}
 
-\section{Explainability Algorithms}
+\clearpage
+\section{Explainability Algorithms} \label{app:explainability_algorithms}
 
 \begin{algorithm}
 \caption{Shapley Value Approximation}
